--- a/core/templates/web/course-guide.html
+++ b/core/templates/web/course-guide.html
@@ -49,12 +49,12 @@
 
 {% block content %}
 
-    <div class="carousel-margin">
-        <img  src="/static/images/web/courseheader.png">
+    <div class="course-header carousel-margin">
+        <img src="/static/images/web/courseheader.png">
     </div>
 
-    <div id="hxco-features-2" style="background: #fff">
-		<div class="hxco-container">
+    <div style="background: #fff; margin-top: 4em;margin-bottom: 3em;">
+		<div class="container">
             <div class="row feature-title text-center" id="lunwen">
                 <h3>论文提升</h3>
             </div>
@@ -101,8 +101,9 @@
         <img  src="/static/images/web/coursebanner.png">
     </div>
 
-    <div id="hxco-features-2" style="background: #fff">
-		<div class="hxco-container">
+
+    <div style="background: #fff; margin-top: 4em;margin-bottom: 3em;">
+		<div class="container">
             <div class="row feature-title text-center" id="wangke">
                 <h3>网课梳理</h3>
             </div>
@@ -142,8 +143,8 @@
 			</div>
         </div>
     </div>
-    <div id="hxco-features-2">
-        <div class="hxco-container">
+    <div style="background: #efefef; padding-top: 4em;padding-bottom: 3em;">
+        <div class="container">
             <div class="row feature-title text-center" id="zuoye">
                 <h3>作业辅导</h3>
             </div>
@@ -183,8 +184,8 @@
 			</div>
         </div>
     </div>
-    <div id="hxco-features-2" style="background: #fff">
-        <div class="hxco-container">
+    <div style="background: #fff; padding-top: 4em;padding-bottom: 3em;">
+        <div class="container">
             <div class="row feature-title text-center" id="kaoqian">
                 <h3>考前强化</h3>
             </div>
