--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -49,7 +49,7 @@
 				<div class="col-xs-10 text-center menu-1">
 					<ul>
                         <li><a href="/" id="home">首页</a></li>
-                        <li><a href="#">学历学位认证</a></li>
+                        <li><a href="/certification">学历学位认证</a></li>
                         <li class="has-dropdown">
                             <a href="/abroadeducation" id="abroad_education">名校直通</a>
                             <ul class="dropdown">
@@ -60,7 +60,7 @@
                         </li>
                         <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
                         <li><a href="/zygh">海归职业规划</a></li>
-                        <li><a href="#">创业贷款申请</a></li>
+                        <li><a href="/cydkzx">创业贷款申请</a></li>
                         <li><a href="#">移民落户咨询</a></li>
 						<li>
 							<a href="/information" id="information">行业资讯</a>
