--- a/core/templates/web/mxztc.html
+++ b/core/templates/web/mxztc.html
@@ -88,9 +88,10 @@
             </div>
             <div class="col-md-8 col-md-offset-2 text-center" style="margin-top:-2em;">
                 <p>
-                    是否担心自己寒窗苦读数载一心备战美本申请，最后不料却功亏一篑，是否怀揣名校梦想而无奈与之擦肩而过，
-                    是否谙熟那些秘而不宣的规则，是否想要在美本申请战中所向披靡，无往不利，
-                    恒心前途教育咨询为您精心准备了名校保进名额。帮助申请者弯道超车。只要满足最低要求，100%保录取！
+                    考哈佛还是进耶鲁不该只是别人家小孩烦恼的事，SAT和TOFEL也都不该是你成为别人家小孩的阻碍。
+                </p>
+                <p>
+                    恒心让你切身体会一次这甜蜜的纠结，圆你TOP100的名校梦。
                 </p>
             </div>
             <div class="col-md-8 col-md-offset-2 text-center heading-section" id="usa" style="margin-top: 4em;">
@@ -128,7 +129,7 @@
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>哥伦比亚大学</h2>
-                        <p>US News Rank 69336</p>
+                        <p>US News Rank 5</p>
                     </div>
                 </div>
             </div>
@@ -137,7 +138,7 @@
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
                         <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+                        <p>US News Rank 8</p>
                     </div>
                 </div>
             </div>
@@ -145,8 +146,8 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+                        <h2>约翰霍普金斯大学</h2>
+                        <p>US News Rank 10</p>
                     </div>
                 </div>
             </div>
@@ -154,8 +155,8 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+                        <h2>南加州大学</h2>
+                        <p>US News Rank 23</p>
                     </div>
                 </div>
             </div>
@@ -163,8 +164,8 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+                        <h2>加州大学欧文分校</h2>
+                        <p>US News Rank 39</p>
                     </div>
                 </div>
             </div>
@@ -172,8 +173,8 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+                        <h2>丹佛大学</h2>
+                        <p>US News Rank 86</p>
                     </div>
                 </div>
             </div>
@@ -185,8 +186,9 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+
+                        <h2>英属哥伦比亚大学</h2>
+{#                        <p>US News Rank 1000</p>#}
                     </div>
                 </div>
             </div>
@@ -194,8 +196,7 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+                        <h2>西蒙弗雷泽大学</h2>
                     </div>
                 </div>
             </div>
@@ -203,8 +204,8 @@
                 <div class="hexoco-project-item">
                     <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
                     <div class="hexoco-text">
-                        <h2>宾夕法尼亚大学</h2>
-                        <p>US News Rank 1000</p>
+                        <h2>维多利亚大学</h2>
+{#                        <p>US News Rank 1000</p>#}
                     </div>
                 </div>
             </div>
