--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -59,12 +59,16 @@
                             </ul>
                         </li>
                         <li><a href="/courseguide" id="course_guide">学术辅导</a></li>
-                        <li><a href="/zygh">海归职业规划</a></li>
-                        <li><a href="/cydkzx">创业贷款申请</a></li>
-                        <li><a href="#">移民落户咨询</a></li>
+                        <li><a href="/zygh" id="career_planning">海归职业规划</a></li>
+                        <li><a href="/assistedliving" id="assistedliving">生活辅助</a></li>
+                        <li>
+							<a href="/loan" id="loan">创业贷款申请</a>
+						</li>
+                        <li><a href="/immigrant" id="immigrant">移民落户咨询</a></li>
 						<li>
 							<a href="/information" id="information">行业资讯</a>
 						</li>
+
                         <li>
 							<a href="/aboutus" id="about_us">关于我们</a>
 						</li>
