--- a/core/templates/web/zygh.html
+++ b/core/templates/web/zygh.html
@@ -3,89 +3,129 @@
 {% block head %}
     <script type="text/javascript">
     $(document).ready(function () {
-        $('#about_us').prop('class', 'actived');
+        $('#career_planning').prop('class', 'actived');
     });
     </script>
 {% endblock %}
 
 {% block content %}
+
     <div class="container carousel-margin">
         <div class="row" style="margin-top: 3em;">
             <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box fadeInUp animated">
-                <h3>海归职业规划</h3>
+                <h4>职业规划</h4>
             </div>
-        </div>
-        <div class="text-center">
-            <img src="/static/images/img_bg_2.jpg" width="100%">
-        </div>
 
-        <div class="col-xs-6 text-left">
-            <div class="hygh-comment">
-                <h3>Quality Education</h3>
-                <hr/>
-                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo . Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo .Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo .Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo .</p>
+            <div class="carousel-margin text-center" style="margin-bottom: 3em;">
+                <img src="/static/images/web/testimg1.jpg">
             </div>
-        </div>
-        <div class="col-xs-6 text-left">
-            <div class="hygh-comment">
-                <h3>Quality Education</h3>
-                <hr/>
-                <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo .Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo .Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo . </p>
-            </div>
-        </div>
+            <div class="col-md-6 animate-box fadeInUp animated ">
+                <div class="row">
+                    <div class="col-md-12 block-title">
+                        <h4>资历包装</h4>
+                        <p>你的能力与才华不该因为年轻被埋没，恒心联合猎聘网北美总部，开放猎聘人才资源数据库，让你与更优秀的人比肩，收获更多高管名企的青睐。</p>
+                        <h5>合作伙伴</h5>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="hexoco-project-item">
+                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <div class="hexoco-text">
+                                <h2>猎聘网</h2>
+                                <p>US News Rank 2</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="hexoco-project-item">
+                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <div class="hexoco-text">
+                                <h2>猎聘网</h2>
+                                <p>US News Rank 2</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="hexoco-project-item">
+                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <div class="hexoco-text">
+                                <h2>猎聘网</h2>
+                                <p>US News Rank 2</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="row row-bottom-padded-lg">
-                <div class="col-xs-push-2 col-md-8">
-{#                    <h4 class="fh5co-number">02.</h4>#}
-                    <h2 style="margin-top:2em !important;">选定目标学校</h2>
-                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>
-                    <ul>
-                        <li>综合学生实力和意愿，选定目标学校 </li>
-                    </ul>
+                <div class="row">
+                    <div class="col-md-12 block-title">
+                        <h5>我们的服务</h5>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>提供北美就业咨询服务</h4>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>开放北美猎聘网人才资源数据库，让你的才华与优秀更快获得名企高管的关注</h4>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box text-left" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>为想要归国就业的留学生提供职业测评、简历包装、就业与面试指导、岗位推荐等就业初期准备工作</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3 col-md-push-1">
-                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-                </div>
-            </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-{#                    <h4 class="fh5co-number">03.</h4>#}
-                    <h2 class="numberh2" style="margin-top:2em !important;">制订申请方案</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>依据目标学校的要求，制订申请时间进程表 </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-xs-push-2 col-md-8">
-{#                    <h4 class="fh5co-number">04.</h4>#}
-                    <h2 style="margin-top:2em !important;">申请材料准备</h2>
-                    <p>Lorem ipsum dolor sit amet,  recusandae voluptatum necessitatibus provident commodi?</p>
-                    <ul>
-                        <li>根据指定的申请方案，准备相应材料和文书</li>
-                        <li>必要时提供考试辅导和背景提升服务</li>
-                    </ul>
-                </div>
-                <div class="col-md-3 col-md-push-1">
-                    <div class="fh5co-icon"><i class="icon-mobile"></i></div>
-                </div>
-            </div>
-            <div class="row row-bottom-padded-lg">
-                <div class="col-md-3 col-push-1">
-                    <div class="fh5co-icon"><i class="icon-browser" style="width: 100%;height: auto;"></i></div>
-                </div>
-                <div class="col-md-8 col-md-push-1">
-{#                    <h4 class="fh5co-number">05.</h4>#}
-                    <h2 class="numberh2" style="margin-top:2em !important;">申请方案实施</h2>
-                    <p class="numberp">Lorem ipsum dolor sit amet</p>
-                    <ul>
-                        <li>基于指定的申请方案，将学生申请材料按时间规划递交学校，并保持与学校的沟通 </li>
-                    </ul>
+
+                <div class="row">
+                    <div class="col-md-12 block-title">
+                        <h5>办理流程</h5>
+                    </div>
                 </div>
             </div>
+            <div class="col-md-6 animate-box fadeInUp animated">
+                 <div class="row">
+                    <div class="col-md-12 block-title">
+                        <h4>就业培训</h4>
+                        <p>海外就业培训是执行美国职业移民(EB-3)计划重要的一环，恒心将为有海外就业或职业移民意向的个人进行评测分流，并根据个人的技能匹配美国相应学校进行短期语言技能与职业技能培训，培训结束后，个人即可凭个人意愿在当地就业，并办理落户，展开美国生活。</p>
+                        <h5>合作伙伴</h5>
+                    </div>
+                 </div>
+                <div class="row">
+                     <div class="col-md-6">
+                        <div class="hexoco-project-item">
+                            <img src="/static/images/web/testimg1.jpg" alt="Image" class="img-responsive">
+                            <div class="hexoco-text">
+                                <h2>猎聘网</h2>
+                                <p>US News Rank 2</p>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+                <div class="row">
+                    <div class="col-md-12 block-title">
+                        <h5>办理流程</h5>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
     </div>
+
 {% endblock %}
