--- a/core/static/css/headercss/style.css
+++ b/core/static/css/headercss/style.css
@@ -1,17 +1,4 @@
 @font-face {
-  font-family:'jianjiashu';
-  src: url("../../font/简家书.TTF");
-}
-@font-face {
-  font-family:'jianping';
-  src: url("../../font/简平黑.TTF");
-}
-@font-face {
-  font-family:'jianheiti';
-  src: url("../../font/简黑体.TTF");
-}
-
-@font-face {
   font-family: 'icomoon';
   src: url("../../fonts/icomoon.eot?srf3rx");
   src: url("../../fonts/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../../fonts/icomoon.ttf?srf3rx") format("truetype"), url("../../fonts/icomoon.woff?srf3rx") format("woff"), url("../../fonts/icomoon.svg?srf3rx#icomoon") format("svg");
@@ -26,7 +13,8 @@
 body {
   /*font-family: "Work Sans", Arial, sans-serif;*/
   font-weight: 400;
-  font-family: arial,"jianjiashu";
+  font-family: arial,"Microsoft YaHei";
+  -ms-font-family:arial,"Microsoft YaHei";
   line-height: 1.7;
   color: #828282;
   background: #fff;
@@ -82,7 +70,7 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "jianjiashu", Arial, sans-serif;
+  font-family: "Microsoft YaHei", Arial, sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
 }
@@ -683,7 +671,7 @@ form label {
   position: relative;
   line-height: 36px;
   color:#333;
-  font-family: "jianjiashu",sans-serif;
+  font-family: "Microsoft YaHei",sans-serif;
 }
 
 .feature-title h4 {
@@ -729,7 +717,7 @@ form label {
 .tagA{
     color: #fff;
     display: inline-block;
-    font-family: "jianjiashu";
+    font-family: "Microsoft YaHei";
     font-size: 12px;
     font-weight: 500;
     height: 30px;
@@ -891,6 +879,7 @@ form label {
   color: #5d5d5d;
   font-weight: 300;
   margin-top: 18px;
+  line-height: 1.5;
   /*margin-bottom: 10px;*/
 }
 
@@ -2369,3 +2358,139 @@ form label {
   color:#ffffff;
 }
 
+.block-title h4{
+    color: rgba(63, 209, 234, 0.64);
+    font-size: 26px;
+    text-align: left;
+}
+
+.block-title p{
+    color: #828282;
+    font-family: arial,"Microsoft YaHei";
+    font-weight: 400;
+    line-height: 1.7;
+    text-align:left;
+}
+
+.block-title h5{
+    color: #333;
+    font-size: 24px;
+    text-align: left;
+}
+
+.circle-div{
+    border: 3px solid #e35353;
+    /*border-radius: 100%;*/
+    display: inline-block;
+    height: 268px;
+    /*margin: 20px auto;*/
+    overflow: hidden;
+    position: relative;
+    /*width: 100%;*/
+    margin-top: 2em;
+    padding-left: 0px;
+    padding-right:0px;
+
+
+}
+.circle-div h3{
+  background: #e35353 url("../../images/web/sanjiao.png") repeat-x scroll center bottom;
+  color: #fff;
+  font-size: 50px;
+  height: 101px;
+  line-height: 50px;
+  padding-top: 23px;
+  /*width: 100%;*/
+}
+
+.circle-div h4{
+  color: #828282;
+  font-size: 24px;
+  height: 130px;
+  line-height: 1.8;
+  padding-top: 18px;
+  margin-left:30px;
+  margin-right:30px;
+
+}
+
+h1{
+  color:#333;
+  font-size:26px;
+  display: inline-block;
+  line-height: 36px;
+  font-weight: 500;
+}
+
+.zifont{
+  color:#666 !important;
+  letter-spacing: 1px;
+  font-weight: 600 !important;
+}
+
+
+.circle-noborder-div{
+    /*border: 3px solid #e35353;*/
+    /*border-radius: 100%;*/
+    display: inline-block;
+    height: 268px;
+    /*margin: 20px auto;*/
+    overflow: hidden;
+    position: relative;
+    /*width: 100%;*/
+    margin-top: 2em;
+    /*padding-left: 0px;*/
+    /*padding-right:0px;*/
+    /*background: #efefef;*/
+
+}
+.circle-noborder-div h3{
+  background: #e35353 url("../../images/web/sanjiao.png") repeat-x scroll center bottom;
+  color: #fff;
+  font-size: 50px;
+  height: 101px;
+  line-height: 50px;
+  padding-top: 23px;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+  /*width: 100%;*/
+}
+
+.circle-noborder-div h4{
+  color: #828282;
+  font-size: 24px;
+  height: 101px;
+  line-height: 1.8;
+  padding-top: 23px;
+  margin-left:30px;
+  margin-right:30px;
+  /*border-right: 3px solid #e35353;*/
+  /*border-left: 3px solid #e35353;*/
+  /*border-bottom: 3px solid #e35353;*/
+}
+
+.circle-noborder-div h5{
+  color: #828282;
+  font-size: 23px;
+  height: 130px;
+  line-height: 1.8;
+  padding-top: 18px;
+  /*margin-left:30px;*/
+  /*margin-right:30px;*/
+  width: 100%;
+  background: #fff;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+}
+
+.circle-noborder-div h1{
+  background: #e35353 url("../../images/web/sanjiao.png") repeat-x scroll center bottom;
+  color: #fff;
+  font-size: 25px;
+  height: 101px;
+  line-height: 50px;
+  padding-top: 23px;
+  width: 100%;
+  margin-bottom: 0px !important;
+  margin-top: 0px !important;
+}
