--- a/core/templates/web/certification.html
+++ b/core/templates/web/certification.html
@@ -12,192 +12,252 @@
     <div class="course-header carousel-margin">
         <img  src="/static/images/web/courseheader.png">
     </div>
-
-    <div class="container" style="margin-top:3em;">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
-                <h4>学历学位认证</h4>
-                <p>既然当初踌躇满志的去了，哪有半途而废败兴而退的道理？恒心定制专业认证解决方案，一定让你满载而归。</p>
-            </div>
-
-            <div class="col-md-6">
-                <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
-{#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
-                </div>
-                <div>
-                    <div style="text-align:left;">
-                        <img src="/static/images/web/left-top.png">
-                    </div>
-                    <div class="education-text ">
-                        <p>在什么情况下，</p>
-                        <p>你该考虑学历学位认证？</p>
-                    </div>
-                    <div style="text-align:right">
-                        <img src="/static/images/web/right-down.png">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-list"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h2>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的唯一权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。</h2>
-                    </div>
+    <div style="background: rgba(0, 0, 0, 0) url(../../static/images/web/dxgh_bg.jpg) no-repeat scroll center bottom;">
+        <div class="container" style="margin-top:3em;">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
+                    <h4>学历学位认证</h4>
+                    <p>既然当初踌躇满志的去了，哪有半途而废败兴而退的道理？恒心定制专业认证解决方案，一定让你满载而归。</p>
                 </div>
 
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-list"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h2>也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-    <div id="hxco-features-2" style="background: #fff" style="width:100%;">
-		<div class="hxco-container1" style="width:100% !important;">
-            <div class="row feature-title text-center" id="wangke">
-                <h3>什么情况会认证受阻？</h3>
-            </div>
-			<div class="row" style="margin-top: 2em;">
-				<div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-cross"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>国外就读院校不在认证范以内</h4>
-						</div>
-					</div>
-
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-cross"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>成绩单非官方颁发</h4>
-						</div>
-					</div>
-
-                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-cross"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>国内外合作办学项目，未在留学生服务中心备案</h4>
-						</div>
-					</div>
-				</div>
                 <div class="col-md-6">
-					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-cross"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>学成归国后，毕业证，成绩单或者其他重要材料遗失</h4>
-						</div>
-					</div>
+                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
+    {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
+                    </div>
+                    <div>
+                        <div style="text-align:left;">
+                            <img src="/static/images/web/left-top.png">
+                        </div>
+                        <div class="education-text ">
+                            <p>在什么情况下，</p>
+                            <p>你该考虑学历学位认证？</p>
+                        </div>
+                        <div style="text-align:right">
+                            <img src="/static/images/web/right-down.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-list"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <h2>国（境）外学历学位认证是在中国大陆范围内对于国（境）外文凭的真实有效性以及同中国大陆学历学位体系对应关系的唯一权威的确认方式。用于鉴别国外学历学位颁发机构的合法性，甄别国外学历学位的真实有效性，并与我国学历学位相对应关系提出咨询意见。</h2>
+                        </div>
+                    </div>
 
                     <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-cross"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>有转学分情况，不满足认证条件 </h4>
-						</div>
-					</div>
-
-                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-						<span class="icon">
-							<i class="icon-cross"></i>
-						</span>
-						<div class="feature-copy">
-							<h4>由于各种原因被就读学校除名，导致合法身份失效</h4>
-						</div>
-					</div>
-
-				</div>
-			</div>
-        </div>
-    </div>
-    </div>
-    <div class="container" style="margin-top:3em;">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
-                <h4>Why Us ?</h4>
-            </div>
-
-            <div class="col-md-6">
-                <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
-{#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
-                </div>
-                <div>
-                    <div style="text-align:left;">
-                        <img src="/static/images/web/left-top.png">
-                    </div>
-                    <div class="education-text ">
-                        <p>为什么选择恒心？</p>
-                    </div>
-                    <div style="text-align:right">
-                        <img src="/static/images/web/right-down.png">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-list"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h5>学历认证一手资源，最低的价格，最快的速度，最贴心的服务</h5>
-                    </div>
-                </div>
-
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-list"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h5>除客服的及时反馈外，恒心官网还拥有定制会员系统，可随时查询认证进度</h5>
-                    </div>
-                </div>
-
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-list"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h5>在中国教育部与美国全国学生信息中心（NSC）联网，其他机构不再接单的艰难环境下，恒心仍能保持80%以上的认证成功几率</h5>
-                    </div>
-                </div>
-
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-list"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h5>多手准备，提供配套应急方案，总能找到最合适你的解决办法</h5>
-                    </div>
-                </div>
-
-                <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
-                    <span class="icon">
-                        <i class="icon-list"></i>
-                    </span>
-                    <div class="feature-copy">
-                        <h5>如果认证结果失败，恒心保证退还所有缴纳费用</h5>
+                        <span class="icon">
+                            <i class="icon-list"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <h2>也就是说，不认证国（境）外学历学位，等于其国外学历回国国内不受认可，相当于没留过学，可用学历只是出国留学前的学历。</h2>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="container">
+        <div id="hxco-features-2" style="background: #fff" style="width:100%;">
+            <div class="hxco-container1" style="width:100% !important;">
+                <div class="row feature-title text-center" id="wangke">
+                    <h3>什么情况会认证受阻？</h3>
+                </div>
+                <div class="row" style="margin-top: 2em;">
+                    <div class="col-md-6">
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-cross"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>国外就读院校不在认证范以内</h4>
+                            </div>
+                        </div>
 
-    <div class="container">
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-cross"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>成绩单非官方颁发</h4>
+                            </div>
+                        </div>
 
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-cross"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>国内外合作办学项目，未在留学生服务中心备案</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-cross"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>学成归国后，毕业证，成绩单或者其他重要材料遗失</h4>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-cross"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>有转学分情况，不满足认证条件 </h4>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-cross"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h4>由于各种原因被就读学校除名，导致合法身份失效</h4>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="container" style="margin-top:3em;">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center heading-section" id="highschool">
+                    <h4>Why Us ?</h4>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="hxco-video hxco-bg" style="background-image: url(../../static/images/img_1.jpg); ">
+    {#						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>#}
+                    </div>
+                    <div>
+                        <div style="text-align:left;">
+                            <img src="/static/images/web/left-top.png">
+                        </div>
+                        <div class="education-text ">
+                            <p>为什么选择恒心？</p>
+                        </div>
+                        <div style="text-align:right">
+                            <img src="/static/images/web/right-down.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-list"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <h5>学历认证一手资源，最低的价格，最快的速度，最贴心的服务</h5>
+                        </div>
+                    </div>
+
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-list"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <h5>除客服的及时反馈外，恒心官网还拥有定制会员系统，可随时查询认证进度</h5>
+                        </div>
+                    </div>
+
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-list"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <h5>在中国教育部与美国全国学生信息中心（NSC）联网，其他机构不再接单的艰难环境下，恒心仍能保持80%以上的认证成功几率</h5>
+                        </div>
+                    </div>
+
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-list"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <h5>多手准备，提供配套应急方案，总能找到最合适你的解决办法</h5>
+                        </div>
+                    </div>
+
+                    <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                        <span class="icon">
+                            <i class="icon-list"></i>
+                        </span>
+                        <div class="feature-copy">
+                            <h5>如果认证结果失败，恒心保证退还所有缴纳费用</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" style="margin-top: 3em;">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center heading-section">
+                    <h4>申请学历学位认证所需材料</h4>
+                </div>
+            </div>
+            <div class="col-md-6">
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h5>二寸彩色证件照片（蓝色背景）</h5>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h5>需认证的国外源语言（颁发证书院校国家的官方语言）学位证书或高等教育文凭正本原件及复印件</h5>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h5>需认证学位证书或高等教育文凭所学课程完整的正式成绩单原件及复印件</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h5>需认证的国外学位证书（高等教育文凭）和成绩单（研究证明信）的中文翻译件原件（须经正规翻译机构（公司）进行翻译，个人翻译无效）</h5>
+                            </div>
+                        </div>
+
+                        <div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+                            <span class="icon">
+                                <i class="icon-check2"></i>
+                            </span>
+                            <div class="feature-copy">
+                                <h5>申请者留学期间所有护照（含所有留学期间的签证记录及出入境记录）原件及复印件</h5>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+
+        <div class="container" style="margin-top: 3em;">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center heading-section">
+                    <h4>申请所需流程</h4>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
